tests/codegen/fail/scalar_value/missing_attributes.stderr
error[E0277]: the trait bound `for<'a> DefaultScalarValue: TryToPrimitive<'a, i32>` is not satisfied
 --> fail/scalar_value/missing_attributes.rs:6:10
  |
6 | pub enum DefaultScalarValue {
  |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `for<'a> TryToPrimitive<'a, i32>` is not implemented for `DefaultScalarValue`
 --> fail/scalar_value/missing_attributes.rs:6:1
  |
6 | pub enum DefaultScalarValue {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `TryToPrimitive<'me, T>`
 --> fail/scalar_value/missing_attributes.rs:5:63
  |
5 | #[derive(Clone, Debug, Deserialize, Display, From, PartialEq, ScalarValue, Serialize, TryInto)]
  |                                                               ^^^^^^^^^^^
  |                                                               |
  |                                                               `DefaultScalarValue` implements `TryToPrimitive<'_, &str>`
  |                                                               `DefaultScalarValue` implements `TryToPrimitive<'_, bool>`
  |                                                               `DefaultScalarValue` implements `TryToPrimitive<'_, f64>`
  |                                                               `DefaultScalarValue` implements `TryToPrimitive<'_, std::string::String>`
  = note: this error originates in the derive macro `ScalarValue` (in Nightly builds, run with -Z macro-backtrace for more info)
